--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "Kiran",
         "postmeta",
         "Suryyas",
-        "Uncategorized"
+        "Uncategorized",
+        "usermeta"
     ]
 }
